# llm-redteam-agent

./: .coverage  .gitignore  README.md  config.yaml  pyproject.toml
demo/: run_demo.sh
reports/: demo_llama3.2_scan.md
src/: __init__.py  attack_base.py  cli.py  conversation.py  judge.py  orchestrator.py  report.py  target.py
src/attacks/: crescendo.py  encoding_bypass.py  jailbreak.py  pii_extraction.py  prompt_injection.py  system_prompt_leak.py  tool_misuse.py
src/payloads/: __init__.py  crescendo.yaml  injections.yaml  jailbreaks.yaml  pii_probes.yaml
tests/: test_attack_base.py  test_conversation.py  test_jailbreak.py  test_judge.py  test_judge_multi_turn.py  test_multi_turn.py  test_orchestrator.py  test_prompt_injection.py  test_remaining_attacks.py  test_report.py  test_system_prompt_leak.py  test_target.py
